// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Interest Graph > should match snapshot if profile is empty 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-dz3rmd-MuiPaper-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="css-w3kal1-MuiChartsWrapper-root"
    >
      <ul
        class="MuiChartsLegend-root MuiChartsLegend-horizontal css-pdrdb0-MuiChartsLegend-root"
      >
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-0"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#e6194b"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M3.192,0A3.192,3.192,0,1,1,-3.192,0A3.192,3.192,0,1,1,3.192,0"
                  fill="#fff"
                  stroke="#e6194b"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              UOB Bank
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-1"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#3cb44b"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M-2.828,-2.828h5.657v5.657h-5.657Z"
                  fill="#fff"
                  stroke="#3cb44b"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              OCBC Bank
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-2"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#ffe119"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M0,-5.264L3.039,0L0,5.264L-3.039,0Z"
                  fill="#fff"
                  stroke="#ffe119"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Maribank
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-3"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#4363d8"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M-3.795,-1.265L-1.265,-1.265L-1.265,-3.795L1.265,-3.795L1.265,-1.265L3.795,-1.265L3.795,1.265L1.265,1.265L1.265,3.795L-1.265,3.795L-1.265,1.265L-3.795,1.265Z"
                  fill="#fff"
                  stroke="#4363d8"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Standard Chartered
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-4"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#f58231"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M0,-5.339L1.199,-1.65L5.078,-1.65L1.94,0.63L3.138,4.319L0,2.039L-3.138,4.319L-1.94,0.63L-5.078,-1.65L-1.199,-1.65Z"
                  fill="#fff"
                  stroke="#f58231"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Trust Bank (Signature)
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-5"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#911eb4"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M0,-4.963L4.298,2.482L-4.298,2.482Z"
                  fill="#fff"
                  stroke="#911eb4"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Trust Bank (Zen)
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-6"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#42d4f4"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M1.527,0.881L1.527,3.934L-1.527,3.934L-1.527,0.881L-4.171,-0.645L-2.644,-3.289L0,-1.763L2.644,-3.289L4.171,-0.645Z"
                  fill="#fff"
                  stroke="#42d4f4"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              GXS
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-7"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#f032e6"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M3.192,0A3.192,3.192,0,1,1,-3.192,0A3.192,3.192,0,1,1,3.192,0"
                  fill="#fff"
                  stroke="#f032e6"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Chocolate Finance
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-8"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#bfef45"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M-2.828,-2.828h5.657v5.657h-5.657Z"
                  fill="#fff"
                  stroke="#bfef45"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Bank of China SuperSaver
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-9"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#fabed4"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M0,-5.264L3.039,0L0,5.264L-3.039,0Z"
                  fill="#fff"
                  stroke="#fabed4"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Maybank Save Up
            </span>
          </button>
        </li>
      </ul>
      <div
        class="MuiChartsSurface-root MuiChartsSurface-root css-1p1kxwd-MuiChartsLayerContainer-root"
        role="none"
      >
        <div
          role="none"
          style="border-width: 0px; width: 100%; height: 100%; overflow: hidden; position: absolute; inset: 0; padding: 0px; outline: none; pointer-events: none;"
          tabindex="0"
        >
          <div
            id="voiceover-_r_1_-1"
            style="display: none;"
          />
          <div
            id="voiceover-_r_1_-2"
            style="display: none;"
          />
          <div
            aria-labelledby="voiceover-_r_1_-1"
            role="img"
            style="width: 100%; height: 100%; outline: none;"
          />
          <div
            aria-labelledby="voiceover-_r_1_-2"
            role="img"
            style="width: 100%; height: 100%; outline: none;"
          />
        </div>
        <svg
          aria-hidden="true"
          class="MuiChartsSvgLayer-root css-1tura0-MuiChartsSvgLayer-root"
          viewBox="0 0 100 500"
        >
          <g
            class="MuiChartsGrid-root css-g2sgfh-MuiChartsGrid-root"
          >
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="435"
              y2="435"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="393.5"
              y2="393.5"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="352"
              y2="352"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="310.5"
              y2="310.5"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="269"
              y2="269"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="227.5"
              y2="227.5"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="186"
              y2="186"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="144.50000000000003"
              y2="144.50000000000003"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="102.99999999999999"
              y2="102.99999999999999"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="61.49999999999999"
              y2="61.49999999999999"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="20"
              y2="20"
            />
          </g>
          <g
            clip-path="url(#_r_0_-clip-path)"
          >
            <g
              class="MuiLineChart-areaPlot css-94vonx-MuiAreaPlot-root"
            />
            <g
              class="MuiLineChart-linePlot css-1ygpbzp-MuiLinePlot-root"
            >
              <clippath
                id="_r_1_-auto-generated-id-0-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-0-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,434.654,84.833,434.308,84.75,433.963C84.667,433.617,84.583,433.271,84.5,432.925C84.417,432.579,84.333,432.233,84.25,431.888C84.167,431.542,84.083,431.196,84,430.85C83.917,430.504,83.833,430.158,83.75,429.813C83.667,429.467,83.583,429.121,83.5,428.775C83.417,428.429,83.333,428.083,83.25,427.738C83.167,427.392,83.083,427.046,83,426.7C82.917,426.354,82.833,426.008,82.75,425.663C82.667,425.317,82.583,424.971,82.5,424.625C82.417,424.279,82.333,423.933,82.25,423.588C82.167,423.242,82.083,422.896,82,422.55C81.917,422.204,81.833,421.858,81.75,421.513C81.667,421.167,81.583,420.821,81.5,420.475C81.417,420.129,81.333,419.783,81.25,419.438C81.167,419.092,81.083,418.746,81,418.4C80.917,418.054,80.833,417.708,80.75,417.363C80.667,417.017,80.583,416.671,80.5,416.325C80.417,415.979,80.333,415.633,80.25,415.288C80.167,414.942,80.083,414.596,80,414.25"
                  data-series="auto-generated-id-0"
                  data-series-id="auto-generated-id-0"
                  fill="none"
                  opacity="1"
                  stroke="#e6194b"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_1_-auto-generated-id-1-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-1-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,434.654,84.833,434.308,84.75,433.963C84.667,433.617,84.583,433.271,84.5,432.925C84.417,432.579,84.333,432.233,84.25,431.888C84.167,431.542,84.083,431.196,84,430.85C83.917,430.504,83.833,430.158,83.75,429.813C83.667,429.467,83.583,429.121,83.5,428.775C83.417,428.429,83.333,428.083,83.25,427.738C83.167,427.392,83.083,427.046,83,426.7C82.917,426.354,82.833,426.008,82.75,425.663C82.667,425.317,82.583,424.971,82.5,424.625C82.417,424.279,82.333,423.933,82.25,423.588C82.167,423.242,82.083,422.896,82,422.55C81.917,422.204,81.833,421.858,81.75,421.513C81.667,421.167,81.583,420.821,81.5,420.475C81.417,420.129,81.333,419.783,81.25,419.438C81.167,419.092,81.083,418.746,81,418.4C80.917,418.054,80.833,417.708,80.75,417.363C80.667,417.017,80.583,416.671,80.5,416.325C80.417,415.979,80.333,415.633,80.25,415.288C80.167,414.942,80.083,414.596,80,414.25"
                  data-series="auto-generated-id-1"
                  data-series-id="auto-generated-id-1"
                  fill="none"
                  opacity="1"
                  stroke="#3cb44b"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_1_-auto-generated-id-2-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-2-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,428.913,84.833,422.827,84.75,416.74C84.667,410.653,84.583,404.567,84.5,398.48C84.417,392.393,84.333,386.307,84.25,380.22C84.167,374.133,84.083,368.047,84,361.96C83.917,355.873,83.833,349.787,83.75,343.7C83.667,337.613,83.583,331.527,83.5,325.44C83.417,319.353,83.333,313.267,83.25,307.18C83.167,301.093,83.083,295.007,83,288.92C82.917,282.833,82.833,276.747,82.75,270.66C82.667,264.573,82.583,252.4,82.5,252.4C82.417,252.4,82.333,252.4,82.25,252.4C82.167,252.4,82.083,252.4,82,252.4C81.917,252.4,81.833,252.4,81.75,252.4C81.667,252.4,81.583,252.4,81.5,252.4C81.417,252.4,81.333,252.4,81.25,252.4C81.167,252.4,81.083,252.4,81,252.4C80.917,252.4,80.833,252.4,80.75,252.4C80.667,252.4,80.583,252.4,80.5,252.4C80.417,252.4,80.333,252.4,80.25,252.4C80.167,252.4,80.083,252.4,80,252.4"
                  data-series="auto-generated-id-2"
                  data-series-id="auto-generated-id-2"
                  fill="none"
                  opacity="1"
                  stroke="#ffe119"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_1_-auto-generated-id-3-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-3-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,434.654,84.833,434.308,84.75,433.963C84.667,433.617,84.583,433.271,84.5,432.925C84.417,432.579,84.333,432.233,84.25,431.888C84.167,431.542,84.083,431.196,84,430.85C83.917,430.504,83.833,430.158,83.75,429.813C83.667,429.467,83.583,429.121,83.5,428.775C83.417,428.429,83.333,428.083,83.25,427.738C83.167,427.392,83.083,427.046,83,426.7C82.917,426.354,82.833,426.008,82.75,425.663C82.667,425.317,82.583,424.971,82.5,424.625C82.417,424.279,82.333,423.933,82.25,423.588C82.167,423.242,82.083,422.896,82,422.55C81.917,422.204,81.833,421.858,81.75,421.513C81.667,421.167,81.583,420.821,81.5,420.475C81.417,420.129,81.333,419.783,81.25,419.438C81.167,419.092,81.083,418.746,81,418.4C80.917,418.054,80.833,417.708,80.75,417.363C80.667,417.017,80.583,416.671,80.5,416.325C80.417,415.979,80.333,415.633,80.25,415.288C80.167,414.942,80.083,414.596,80,414.25"
                  data-series="auto-generated-id-3"
                  data-series-id="auto-generated-id-3"
                  fill="none"
                  opacity="1"
                  stroke="#4363d8"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_1_-auto-generated-id-4-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-4-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,434.654,84.833,434.308,84.75,433.963C84.667,433.617,84.583,433.271,84.5,432.925C84.417,432.579,84.333,432.233,84.25,431.888C84.167,431.542,84.083,431.196,84,430.85C83.917,430.504,83.833,430.158,83.75,429.813C83.667,429.467,83.583,429.121,83.5,428.775C83.417,428.429,83.333,428.083,83.25,427.738C83.167,427.392,83.083,427.046,83,426.7C82.917,426.354,82.833,426.354,82.75,425.663C82.667,424.971,82.583,367.217,82.5,362.375C82.417,357.533,82.333,357.533,82.25,355.113C82.167,352.692,82.083,350.271,82,347.85C81.917,345.429,81.833,343.008,81.75,340.588C81.667,338.167,81.583,335.746,81.5,333.325C81.417,330.904,81.333,328.483,81.25,326.063C81.167,323.642,81.083,321.221,81,318.8C80.917,316.379,80.833,313.958,80.75,311.538C80.667,309.117,80.583,306.696,80.5,304.275C80.417,301.854,80.333,299.433,80.25,297.013C80.167,294.592,80.083,292.171,80,289.75"
                  data-series="auto-generated-id-4"
                  data-series-id="auto-generated-id-4"
                  fill="none"
                  opacity="1"
                  stroke="#f58231"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_1_-auto-generated-id-5-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-5-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,432.233,84.833,429.467,84.75,426.7C84.667,423.933,84.583,421.167,84.5,418.4C84.417,415.633,84.333,412.867,84.25,410.1C84.167,407.333,84.083,404.567,84,401.8C83.917,399.033,83.833,396.267,83.75,393.5C83.667,390.733,83.583,387.967,83.5,385.2C83.417,382.433,83.333,379.667,83.25,376.9C83.167,374.133,83.083,371.367,83,368.6C82.917,365.833,82.833,363.067,82.75,360.3C82.667,357.533,82.583,354.767,82.5,352C82.417,349.233,82.333,346.467,82.25,343.7C82.167,340.933,82.083,338.167,82,335.4C81.917,332.633,81.833,329.867,81.75,327.1C81.667,324.333,81.583,321.567,81.5,318.8C81.417,316.033,81.333,313.267,81.25,310.5C81.167,307.733,81.083,304.967,81,302.2C80.917,299.433,80.833,296.667,80.75,293.9C80.667,291.133,80.583,288.367,80.5,285.6C80.417,282.833,80.333,280.067,80.25,277.3C80.167,274.533,80.083,271.767,80,269"
                  data-series="auto-generated-id-5"
                  data-series-id="auto-generated-id-5"
                  fill="none"
                  opacity="1"
                  stroke="#911eb4"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_1_-auto-generated-id-6-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-6-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,426.562,84.833,418.123,84.75,409.685C84.667,401.247,84.583,392.808,84.5,384.37C84.417,375.932,84.333,367.493,84.25,359.055C84.167,350.617,84.083,342.178,84,333.74C83.917,325.302,83.833,316.863,83.75,308.425C83.667,299.987,83.583,291.548,83.5,283.11C83.417,274.672,83.333,266.233,83.25,257.795C83.167,249.357,83.083,240.676,83,232.48C82.917,224.284,82.833,214.462,82.75,208.618C82.667,202.773,82.583,197.413,82.5,197.413C82.417,197.413,82.333,197.413,82.25,197.413C82.167,197.413,82.083,197.413,82,197.413C81.917,197.413,81.833,197.413,81.75,197.413C81.667,197.413,81.583,197.413,81.5,197.413C81.417,197.413,81.333,197.413,81.25,197.413C81.167,197.413,81.083,197.413,81,197.413C80.917,197.413,80.833,197.413,80.75,197.413C80.667,197.413,80.583,197.413,80.5,197.413C80.417,197.413,80.333,197.413,80.25,197.413C80.167,197.413,80.083,197.413,80,197.413"
                  data-series="auto-generated-id-6"
                  data-series-id="auto-generated-id-6"
                  fill="none"
                  opacity="1"
                  stroke="#42d4f4"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_1_-auto-generated-id-7-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-7-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,421.167,84.833,407.333,84.75,393.5C84.667,379.667,84.583,365.142,84.5,352C84.417,338.858,84.333,327.1,84.25,314.65C84.167,302.2,84.083,289.75,84,277.3C83.917,264.85,83.833,252.4,83.75,239.95C83.667,227.5,83.583,215.05,83.5,202.6C83.417,190.15,83.333,177.7,83.25,165.25C83.167,152.8,83.083,140.35,83,127.9C82.917,115.45,82.833,103,82.75,90.55C82.667,78.1,82.583,53.2,82.5,53.2C82.417,53.2,82.333,53.2,82.25,53.2C82.167,53.2,82.083,53.2,82,53.2C81.917,53.2,81.833,53.2,81.75,53.2C81.667,53.2,81.583,53.2,81.5,53.2C81.417,53.2,81.333,53.2,81.25,53.2C81.167,53.2,81.083,53.2,81,53.2C80.917,53.2,80.833,53.2,80.75,53.2C80.667,53.2,80.583,53.2,80.5,53.2C80.417,53.2,80.333,53.2,80.25,53.2C80.167,53.2,80.083,53.2,80,53.2"
                  data-series="auto-generated-id-7"
                  data-series-id="auto-generated-id-7"
                  fill="none"
                  opacity="1"
                  stroke="#f032e6"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_1_-auto-generated-id-8-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-8-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,431.542,84.833,428.083,84.75,424.625C84.667,421.167,84.583,418.746,84.5,414.25C84.417,409.754,84.333,403.183,84.25,397.65C84.167,392.117,84.083,386.583,84,381.05C83.917,375.517,83.833,369.983,83.75,364.45C83.667,358.917,83.583,354.075,83.5,347.85C83.417,341.625,83.333,334.017,83.25,327.1C83.167,320.183,83.083,313.267,83,306.35C82.917,299.433,82.833,292.517,82.75,285.6C82.667,278.683,82.583,270.038,82.5,264.85C82.417,259.663,82.333,257.933,82.25,254.475C82.167,251.017,82.083,247.558,82,244.1C81.917,240.642,81.833,237.183,81.75,233.725C81.667,230.267,81.583,226.808,81.5,223.35C81.417,219.892,81.333,216.433,81.25,212.975C81.167,209.517,81.083,206.058,81,202.6C80.917,199.142,80.833,195.683,80.75,192.225C80.667,188.767,80.583,185.308,80.5,181.85C80.417,178.392,80.333,174.933,80.25,171.475C80.167,168.017,80.083,164.558,80,161.1"
                  data-series="auto-generated-id-8"
                  data-series-id="auto-generated-id-8"
                  fill="none"
                  opacity="1"
                  stroke="#bfef45"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_1_-auto-generated-id-9-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_1_-auto-generated-id-9-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,433.79,84.833,432.579,84.75,431.058C84.667,429.536,84.583,427.599,84.5,425.87C84.417,424.141,84.333,422.412,84.25,420.683C84.167,418.953,84.083,417.224,84,415.495C83.917,413.766,83.833,412.037,83.75,410.308C83.667,408.578,83.583,406.849,83.5,405.12C83.417,403.391,83.333,401.662,83.25,399.933C83.167,398.203,83.083,396.474,83,394.745C82.917,393.016,82.833,391.287,82.75,389.558C82.667,387.828,82.583,386.099,82.5,384.37C82.417,382.641,82.333,380.912,82.25,379.182C82.167,377.453,82.083,375.724,82,373.995C81.917,372.266,81.833,370.537,81.75,368.808C81.667,367.078,81.583,365.349,81.5,363.62C81.417,361.891,81.333,360.162,81.25,358.433C81.167,356.703,81.083,354.974,81,353.245C80.917,351.516,80.833,349.787,80.75,348.058C80.667,346.328,80.583,344.599,80.5,342.87C80.417,341.141,80.333,339.412,80.25,337.683C80.167,335.953,80.083,334.224,80,332.495"
                  data-series="auto-generated-id-9"
                  data-series-id="auto-generated-id-9"
                  fill="none"
                  opacity="1"
                  stroke="#fabed4"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
            </g>
          </g>
          <g
            class="MuiChartsAxis-root MuiChartsAxis-directionX MuiChartsAxis-bottom css-1yscjcf-MuiChartsAxis-root-MuiChartsXAxis-root"
            data-axis-id="defaultized-x-axis-0"
            transform="translate(0, 435)"
          >
            <line
              class="MuiChartsAxis-line"
              x1="85"
              x2="80"
            />
            <g
              class="MuiChartsAxis-label"
            >
              <text
                dominant-baseline="text-after-edge"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 14px; line-height: 1; letter-spacing: 0.00938em;"
                text-anchor="middle"
                x="82.5"
                y="45"
              >
                <tspan
                  dominant-baseline="text-after-edge"
                  dy="0px"
                  x="82.5"
                >
                  Savings ($)
                </tspan>
              </text>
            </g>
          </g>
          <g
            class="MuiChartsAxis-root MuiChartsAxis-directionY MuiChartsAxis-left css-ra8wgq-MuiChartsAxis-root-MuiChartsYAxis-root"
            data-axis-id="defaultized-y-axis-0"
            transform="translate(85, 0)"
          >
            <line
              class="MuiChartsAxis-line"
              stroke-linecap="square"
              y1="20"
              y2="435"
            />
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 435)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $0k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 393.5)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $0.2k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 352)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $0.4k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 310.5)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $0.6k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 269)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $0.8k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 227.5)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $1k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 186)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $1.2k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 144.50000000000003)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $1.4k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 102.99999999999999)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $1.6k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 61.49999999999999)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $1.8k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 20)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $2k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-label"
            >
              <text
                dominant-baseline="text-before-edge"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 14px; line-height: 1; letter-spacing: 0.00938em; translate: -20px;"
                text-anchor="middle"
                transform="rotate(-90, -65, 227.5)"
                x="-65"
                y="227.5"
              >
                <tspan
                  dominant-baseline="text-before-edge"
                  dy="0px"
                  x="-65"
                >
                  Yearly Interest ($)
                </tspan>
              </text>
            </g>
          </g>
          <g
            data-drawing-container="true"
          >
            <g
              class="MuiLineChart-markPlot css-1xks5uz-MuiMarkPlot-root"
            >
              <g
                clip-path="url(#_r_1_-auto-generated-id-0-line-clip)"
                data-series="auto-generated-id-0"
              />
              <g
                clip-path="url(#_r_1_-auto-generated-id-1-line-clip)"
                data-series="auto-generated-id-1"
              />
              <g
                clip-path="url(#_r_1_-auto-generated-id-2-line-clip)"
                data-series="auto-generated-id-2"
              />
              <g
                clip-path="url(#_r_1_-auto-generated-id-3-line-clip)"
                data-series="auto-generated-id-3"
              />
              <g
                clip-path="url(#_r_1_-auto-generated-id-4-line-clip)"
                data-series="auto-generated-id-4"
              />
              <g
                clip-path="url(#_r_1_-auto-generated-id-5-line-clip)"
                data-series="auto-generated-id-5"
              />
              <g
                clip-path="url(#_r_1_-auto-generated-id-6-line-clip)"
                data-series="auto-generated-id-6"
              />
              <g
                clip-path="url(#_r_1_-auto-generated-id-7-line-clip)"
                data-series="auto-generated-id-7"
              />
              <g
                clip-path="url(#_r_1_-auto-generated-id-8-line-clip)"
                data-series="auto-generated-id-8"
              />
              <g
                clip-path="url(#_r_1_-auto-generated-id-9-line-clip)"
                data-series="auto-generated-id-9"
              />
            </g>
          </g>
          <clippath
            id="_r_0_-clip-path"
          >
            <rect
              height="415"
              width="-5"
              x="85"
              y="20"
            />
          </clippath>
        </svg>
        <div
          style="position: absolute; left: 0px; top: 0px; pointer-events: none; opacity: 0; width: 1px; height: 1px;"
        />
      </div>
    </div>
    <span
      class="MuiTypography-root MuiTypography-caption css-u1vmxs-MuiTypography-root"
    >
      * Graph shows interest rates for savings from $0 to $200,000, covering typical savings account ranges
    </span>
  </div>
</DocumentFragment>
`;

exports[`Interest Graph > should match snapshot if profile is not empty 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-dz3rmd-MuiPaper-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="css-w3kal1-MuiChartsWrapper-root"
    >
      <ul
        class="MuiChartsLegend-root MuiChartsLegend-horizontal css-pdrdb0-MuiChartsLegend-root"
      >
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-0"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#e6194b"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M3.192,0A3.192,3.192,0,1,1,-3.192,0A3.192,3.192,0,1,1,3.192,0"
                  fill="#fff"
                  stroke="#e6194b"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              UOB Bank
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-1"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#3cb44b"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M-2.828,-2.828h5.657v5.657h-5.657Z"
                  fill="#fff"
                  stroke="#3cb44b"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              OCBC Bank
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-2"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#ffe119"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M0,-5.264L3.039,0L0,5.264L-3.039,0Z"
                  fill="#fff"
                  stroke="#ffe119"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Maribank
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-3"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#4363d8"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M-3.795,-1.265L-1.265,-1.265L-1.265,-3.795L1.265,-3.795L1.265,-1.265L3.795,-1.265L3.795,1.265L1.265,1.265L1.265,3.795L-1.265,3.795L-1.265,1.265L-3.795,1.265Z"
                  fill="#fff"
                  stroke="#4363d8"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Standard Chartered
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-4"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#f58231"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M0,-5.339L1.199,-1.65L5.078,-1.65L1.94,0.63L3.138,4.319L0,2.039L-3.138,4.319L-1.94,0.63L-5.078,-1.65L-1.199,-1.65Z"
                  fill="#fff"
                  stroke="#f58231"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Trust Bank (Signature)
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-5"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#911eb4"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M0,-4.963L4.298,2.482L-4.298,2.482Z"
                  fill="#fff"
                  stroke="#911eb4"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Trust Bank (Zen)
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-6"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#42d4f4"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M1.527,0.881L1.527,3.934L-1.527,3.934L-1.527,0.881L-4.171,-0.645L-2.644,-3.289L0,-1.763L2.644,-3.289L4.171,-0.645Z"
                  fill="#fff"
                  stroke="#42d4f4"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              GXS
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-7"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#f032e6"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M3.192,0A3.192,3.192,0,1,1,-3.192,0A3.192,3.192,0,1,1,3.192,0"
                  fill="#fff"
                  stroke="#f032e6"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Chocolate Finance
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-8"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#bfef45"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M-2.828,-2.828h5.657v5.657h-5.657Z"
                  fill="#fff"
                  stroke="#bfef45"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Bank of China SuperSaver
            </span>
          </button>
        </li>
        <li
          class="MuiChartsLegend-item"
          data-series="auto-generated-id-9"
        >
          <button
            class="MuiChartsLegend-series"
            type="button"
          >
            <div
              aria-hidden="true"
              class="MuiChartsLabelMark-root MuiChartsLabelMark-lineAndMark MuiChartsLegend-mark css-box9k7-MuiChartsLabelMark-root"
            >
              <svg
                preserveAspectRatio="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="MuiChartsLabelMark-fill"
                  d="M 1 8 L 15 8"
                  stroke="#fabed4"
                  stroke-linecap="round"
                  stroke-width="2"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  d="M0,-5.264L3.039,0L0,5.264L-3.039,0Z"
                  fill="#fff"
                  stroke="#fabed4"
                  stroke-width="2"
                  transform="translate(8, 8) "
                />
              </svg>
            </div>
            <span
              class="MuiChartsLabel-root MuiChartsLegend-label"
            >
              Maybank Save Up
            </span>
          </button>
        </li>
      </ul>
      <div
        class="MuiChartsSurface-root MuiChartsSurface-root css-1p1kxwd-MuiChartsLayerContainer-root"
        role="none"
      >
        <div
          role="none"
          style="border-width: 0px; width: 100%; height: 100%; overflow: hidden; position: absolute; inset: 0; padding: 0px; outline: none; pointer-events: none;"
          tabindex="0"
        >
          <div
            id="voiceover-_r_4_-1"
            style="display: none;"
          />
          <div
            id="voiceover-_r_4_-2"
            style="display: none;"
          />
          <div
            aria-labelledby="voiceover-_r_4_-1"
            role="img"
            style="width: 100%; height: 100%; outline: none;"
          />
          <div
            aria-labelledby="voiceover-_r_4_-2"
            role="img"
            style="width: 100%; height: 100%; outline: none;"
          />
        </div>
        <svg
          aria-hidden="true"
          class="MuiChartsSvgLayer-root css-1tura0-MuiChartsSvgLayer-root"
          viewBox="0 0 100 500"
        >
          <g
            class="MuiChartsGrid-root css-g2sgfh-MuiChartsGrid-root"
          >
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="435"
              y2="435"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="365.8333333333333"
              y2="365.8333333333333"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="296.66666666666674"
              y2="296.66666666666674"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="227.5"
              y2="227.5"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="158.33333333333337"
              y2="158.33333333333337"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="89.16666666666666"
              y2="89.16666666666666"
            />
            <line
              class="MuiChartsGrid-line MuiChartsGrid-horizontalLine css-195sd4n-MuiChartsGrid-line"
              x1="85"
              x2="80"
              y1="20"
              y2="20"
            />
          </g>
          <g
            clip-path="url(#_r_3_-clip-path)"
          >
            <g
              class="MuiLineChart-areaPlot css-94vonx-MuiAreaPlot-root"
            />
            <g
              class="MuiLineChart-linePlot css-1ygpbzp-MuiLinePlot-root"
            >
              <clippath
                id="_r_4_-auto-generated-id-0-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-0-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,430.389,84.833,425.778,84.75,421.167C84.667,416.556,84.583,411.944,84.5,407.333C84.417,402.722,84.333,398.111,84.25,393.5C84.167,388.889,84.083,384.278,84,379.667C83.917,375.056,83.833,370.444,83.75,365.833C83.667,361.222,83.583,356.611,83.5,352C83.417,347.389,83.333,344.507,83.25,338.167C83.167,331.826,83.083,323.757,83,313.958C82.917,304.16,82.833,290.903,82.75,279.375C82.667,267.847,82.583,256.319,82.5,244.792C82.417,233.264,82.333,221.736,82.25,210.208C82.167,198.681,82.083,188.19,82,175.625C81.917,163.06,81.833,149.457,81.75,134.817C81.667,120.176,81.583,103.461,81.5,87.783C81.417,72.106,81.333,41.211,81.25,40.75C81.167,40.289,81.083,40.289,81,40.058C80.917,39.828,80.833,39.597,80.75,39.367C80.667,39.136,80.583,38.906,80.5,38.675C80.417,38.444,80.333,38.214,80.25,37.983C80.167,37.753,80.083,37.522,80,37.292"
                  data-series="auto-generated-id-0"
                  data-series-id="auto-generated-id-0"
                  fill="none"
                  opacity="1"
                  stroke="#e6194b"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_4_-auto-generated-id-1-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-1-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,427.161,84.833,419.322,84.75,411.483C84.667,403.644,84.583,395.806,84.5,387.967C84.417,380.128,84.333,372.289,84.25,364.45C84.167,356.611,84.083,348.772,84,340.933C83.917,333.094,83.833,325.256,83.75,317.417C83.667,309.578,83.583,301.739,83.5,293.9C83.417,286.061,83.333,279.375,83.25,270.383C83.167,261.392,83.083,251.247,83,239.95C82.917,228.653,82.833,215.05,82.75,202.6C82.667,190.15,82.583,165.711,82.5,165.25C82.417,164.789,82.333,164.789,82.25,164.558C82.167,164.328,82.083,164.097,82,163.867C81.917,163.636,81.833,163.406,81.75,163.175C81.667,162.944,81.583,162.714,81.5,162.483C81.417,162.253,81.333,162.022,81.25,161.792C81.167,161.561,81.083,161.331,81,161.1C80.917,160.869,80.833,160.639,80.75,160.408C80.667,160.178,80.583,159.947,80.5,159.717C80.417,159.486,80.333,159.256,80.25,159.025C80.167,158.794,80.083,158.564,80,158.333"
                  data-series="auto-generated-id-1"
                  data-series-id="auto-generated-id-1"
                  fill="none"
                  opacity="1"
                  stroke="#3cb44b"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_4_-auto-generated-id-2-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-2-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,430.942,84.833,426.884,84.75,422.827C84.667,418.769,84.583,414.711,84.5,410.653C84.417,406.596,84.333,402.538,84.25,398.48C84.167,394.422,84.083,390.364,84,386.307C83.917,382.249,83.833,378.191,83.75,374.133C83.667,370.076,83.583,366.018,83.5,361.96C83.417,357.902,83.333,353.844,83.25,349.787C83.167,345.729,83.083,341.671,83,337.613C82.917,333.556,82.833,329.498,82.75,325.44C82.667,321.382,82.583,313.267,82.5,313.267C82.417,313.267,82.333,313.267,82.25,313.267C82.167,313.267,82.083,313.267,82,313.267C81.917,313.267,81.833,313.267,81.75,313.267C81.667,313.267,81.583,313.267,81.5,313.267C81.417,313.267,81.333,313.267,81.25,313.267C81.167,313.267,81.083,313.267,81,313.267C80.917,313.267,80.833,313.267,80.75,313.267C80.667,313.267,80.583,313.267,80.5,313.267C80.417,313.267,80.333,313.267,80.25,313.267C80.167,313.267,80.083,313.267,80,313.267"
                  data-series="auto-generated-id-2"
                  data-series-id="auto-generated-id-2"
                  fill="none"
                  opacity="1"
                  stroke="#ffe119"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_4_-auto-generated-id-3-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-3-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,426.469,84.833,417.939,84.75,409.408C84.667,400.878,84.583,392.347,84.5,383.817C84.417,375.286,84.333,366.756,84.25,358.225C84.167,349.694,84.083,341.164,84,332.633C83.917,324.103,83.833,315.572,83.75,307.042C83.667,298.511,83.583,289.981,83.5,281.45C83.417,272.919,83.333,264.389,83.25,255.858C83.167,247.328,83.083,238.797,83,230.267C82.917,221.736,82.833,213.206,82.75,204.675C82.667,196.144,82.583,179.544,82.5,179.083C82.417,178.622,82.333,178.622,82.25,178.392C82.167,178.161,82.083,177.931,82,177.7C81.917,177.469,81.833,177.239,81.75,177.008C81.667,176.778,81.583,176.547,81.5,176.317C81.417,176.086,81.333,175.856,81.25,175.625C81.167,175.394,81.083,175.164,81,174.933C80.917,174.703,80.833,174.472,80.75,174.242C80.667,174.011,80.583,173.781,80.5,173.55C80.417,173.319,80.333,173.089,80.25,172.858C80.167,172.628,80.083,172.397,80,172.167"
                  data-series="auto-generated-id-3"
                  data-series-id="auto-generated-id-3"
                  fill="none"
                  opacity="1"
                  stroke="#4363d8"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_4_-auto-generated-id-4-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-4-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,432.233,84.833,429.467,84.75,426.7C84.667,423.933,84.583,421.167,84.5,418.4C84.417,415.633,84.333,412.867,84.25,410.1C84.167,407.333,84.083,404.567,84,401.8C83.917,399.033,83.833,396.267,83.75,393.5C83.667,390.733,83.583,387.967,83.5,385.2C83.417,382.433,83.333,379.667,83.25,376.9C83.167,374.133,83.083,371.367,83,368.6C82.917,365.833,82.833,365.833,82.75,360.3C82.667,354.767,82.583,318.8,82.5,310.5C82.417,302.2,82.333,302.2,82.25,298.05C82.167,293.9,82.083,289.75,82,285.6C81.917,281.45,81.833,277.3,81.75,273.15C81.667,269,81.583,264.85,81.5,260.7C81.417,256.55,81.333,252.4,81.25,248.25C81.167,244.1,81.083,239.95,81,235.8C80.917,231.65,80.833,227.5,80.75,223.35C80.667,219.2,80.583,215.05,80.5,210.9C80.417,206.75,80.333,202.6,80.25,198.45C80.167,194.3,80.083,190.15,80,186"
                  data-series="auto-generated-id-4"
                  data-series-id="auto-generated-id-4"
                  fill="none"
                  opacity="1"
                  stroke="#f58231"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_4_-auto-generated-id-5-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-5-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,433.156,84.833,431.311,84.75,429.467C84.667,427.622,84.583,425.778,84.5,423.933C84.417,422.089,84.333,420.244,84.25,418.4C84.167,416.556,84.083,414.711,84,412.867C83.917,411.022,83.833,409.178,83.75,407.333C83.667,405.489,83.583,403.644,83.5,401.8C83.417,399.956,83.333,398.111,83.25,396.267C83.167,394.422,83.083,392.578,83,390.733C82.917,388.889,82.833,387.044,82.75,385.2C82.667,383.356,82.583,381.511,82.5,379.667C82.417,377.822,82.333,375.978,82.25,374.133C82.167,372.289,82.083,370.444,82,368.6C81.917,366.756,81.833,364.911,81.75,363.067C81.667,361.222,81.583,359.378,81.5,357.533C81.417,355.689,81.333,353.844,81.25,352C81.167,350.156,81.083,348.311,81,346.467C80.917,344.622,80.833,342.778,80.75,340.933C80.667,339.089,80.583,337.244,80.5,335.4C80.417,333.556,80.333,331.711,80.25,329.867C80.167,328.022,80.083,326.178,80,324.333"
                  data-series="auto-generated-id-5"
                  data-series-id="auto-generated-id-5"
                  fill="none"
                  opacity="1"
                  stroke="#911eb4"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_4_-auto-generated-id-6-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-6-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,429.374,84.833,423.749,84.75,418.123C84.667,412.498,84.583,406.872,84.5,401.247C84.417,395.621,84.333,389.996,84.25,384.37C84.167,378.744,84.083,373.119,84,367.493C83.917,361.868,83.833,356.242,83.75,350.617C83.667,344.991,83.583,339.366,83.5,333.74C83.417,328.114,83.333,322.489,83.25,316.863C83.167,311.238,83.083,305.451,83,299.987C82.917,294.523,82.833,287.975,82.75,284.078C82.667,280.182,82.583,276.608,82.5,276.608C82.417,276.608,82.333,276.608,82.25,276.608C82.167,276.608,82.083,276.608,82,276.608C81.917,276.608,81.833,276.608,81.75,276.608C81.667,276.608,81.583,276.608,81.5,276.608C81.417,276.608,81.333,276.608,81.25,276.608C81.167,276.608,81.083,276.608,81,276.608C80.917,276.608,80.833,276.608,80.75,276.608C80.667,276.608,80.583,276.608,80.5,276.608C80.417,276.608,80.333,276.608,80.25,276.608C80.167,276.608,80.083,276.608,80,276.608"
                  data-series="auto-generated-id-6"
                  data-series-id="auto-generated-id-6"
                  fill="none"
                  opacity="1"
                  stroke="#42d4f4"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_4_-auto-generated-id-7-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-7-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,425.778,84.833,416.556,84.75,407.333C84.667,398.111,84.583,388.428,84.5,379.667C84.417,370.906,84.333,363.067,84.25,354.767C84.167,346.467,84.083,338.167,84,329.867C83.917,321.567,83.833,313.267,83.75,304.967C83.667,296.667,83.583,288.367,83.5,280.067C83.417,271.767,83.333,263.467,83.25,255.167C83.167,246.867,83.083,238.567,83,230.267C82.917,221.967,82.833,213.667,82.75,205.367C82.667,197.067,82.583,180.467,82.5,180.467C82.417,180.467,82.333,180.467,82.25,180.467C82.167,180.467,82.083,180.467,82,180.467C81.917,180.467,81.833,180.467,81.75,180.467C81.667,180.467,81.583,180.467,81.5,180.467C81.417,180.467,81.333,180.467,81.25,180.467C81.167,180.467,81.083,180.467,81,180.467C80.917,180.467,80.833,180.467,80.75,180.467C80.667,180.467,80.583,180.467,80.5,180.467C80.417,180.467,80.333,180.467,80.25,180.467C80.167,180.467,80.083,180.467,80,180.467"
                  data-series="auto-generated-id-7"
                  data-series-id="auto-generated-id-7"
                  fill="none"
                  opacity="1"
                  stroke="#f032e6"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_4_-auto-generated-id-8-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-8-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,432.694,84.833,430.389,84.75,428.083C84.667,425.778,84.583,424.164,84.5,421.167C84.417,418.169,84.333,413.789,84.25,410.1C84.167,406.411,84.083,402.722,84,399.033C83.917,395.344,83.833,391.656,83.75,387.967C83.667,384.278,83.583,381.05,83.5,376.9C83.417,372.75,83.333,367.678,83.25,363.067C83.167,358.456,83.083,353.844,83,349.233C82.917,344.622,82.833,340.011,82.75,335.4C82.667,330.789,82.583,325.025,82.5,321.567C82.417,318.108,82.333,316.956,82.25,314.65C82.167,312.344,82.083,310.039,82,307.733C81.917,305.428,81.833,303.122,81.75,300.817C81.667,298.511,81.583,296.206,81.5,293.9C81.417,291.594,81.333,289.289,81.25,286.983C81.167,284.678,81.083,282.372,81,280.067C80.917,277.761,80.833,275.456,80.75,273.15C80.667,270.844,80.583,268.539,80.5,266.233C80.417,263.928,80.333,261.622,80.25,259.317C80.167,257.011,80.083,254.706,80,252.4"
                  data-series="auto-generated-id-8"
                  data-series-id="auto-generated-id-8"
                  fill="none"
                  opacity="1"
                  stroke="#bfef45"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
              <clippath
                id="_r_4_-auto-generated-id-9-line-clip"
              >
                <rect
                  class="css-dbuw8t"
                  height="500"
                  width="100"
                  x="0"
                  y="0"
                />
              </clippath>
              <g
                clip-path="url(#_r_4_-auto-generated-id-9-line-clip)"
              >
                <path
                  class="MuiLineChart-line"
                  cursor="unset"
                  d="M85,435C84.917,429.582,84.833,424.164,84.75,418.538C84.667,412.913,84.583,407.011,84.5,401.247C84.417,395.483,84.333,389.719,84.25,383.955C84.167,378.191,84.083,372.427,84,366.663C83.917,360.899,83.833,356.288,83.75,349.372C83.667,342.455,83.583,333.233,83.5,325.163C83.417,317.094,83.333,307.295,83.25,300.955C83.167,294.615,83.083,289.427,83,287.122C82.917,284.816,82.833,284.816,82.75,283.663C82.667,282.511,82.583,281.358,82.5,280.205C82.417,279.052,82.333,277.899,82.25,276.747C82.167,275.594,82.083,274.441,82,273.288C81.917,272.136,81.833,270.983,81.75,269.83C81.667,268.677,81.583,267.524,81.5,266.372C81.417,265.219,81.333,264.066,81.25,262.913C81.167,261.761,81.083,260.608,81,259.455C80.917,258.302,80.833,257.149,80.75,255.997C80.667,254.844,80.583,253.691,80.5,252.538C80.417,251.386,80.333,250.233,80.25,249.08C80.167,247.927,80.083,246.774,80,245.622"
                  data-series="auto-generated-id-9"
                  data-series-id="auto-generated-id-9"
                  fill="none"
                  opacity="1"
                  stroke="#fabed4"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </g>
            </g>
          </g>
          <g
            class="MuiChartsAxis-root MuiChartsAxis-directionX MuiChartsAxis-bottom css-1yscjcf-MuiChartsAxis-root-MuiChartsXAxis-root"
            data-axis-id="defaultized-x-axis-0"
            transform="translate(0, 435)"
          >
            <line
              class="MuiChartsAxis-line"
              x1="85"
              x2="80"
            />
            <g
              class="MuiChartsAxis-label"
            >
              <text
                dominant-baseline="text-after-edge"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 14px; line-height: 1; letter-spacing: 0.00938em;"
                text-anchor="middle"
                x="82.5"
                y="45"
              >
                <tspan
                  dominant-baseline="text-after-edge"
                  dy="0px"
                  x="82.5"
                >
                  Savings ($)
                </tspan>
              </text>
            </g>
          </g>
          <g
            class="MuiChartsAxis-root MuiChartsAxis-directionY MuiChartsAxis-left css-ra8wgq-MuiChartsAxis-root-MuiChartsYAxis-root"
            data-axis-id="defaultized-y-axis-0"
            transform="translate(85, 0)"
          >
            <line
              class="MuiChartsAxis-line"
              stroke-linecap="square"
              y1="20"
              y2="435"
            />
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 435)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $0k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 365.8333333333333)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $0.5k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 296.66666666666674)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $1k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 227.5)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $1.5k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 158.33333333333337)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $2k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 89.16666666666666)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $2.5k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-tickContainer"
              transform="translate(0, 20)"
            >
              <line
                class="MuiChartsAxis-tick"
                x2="-6"
              />
              <text
                class="MuiChartsAxis-tickLabel"
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 12px; line-height: 1.66; letter-spacing: 0.03333em;"
                text-anchor="end"
                x="-8"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="-8"
                >
                  $3k
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsAxis-label"
            >
              <text
                dominant-baseline="text-before-edge"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 14px; line-height: 1; letter-spacing: 0.00938em; translate: -20px;"
                text-anchor="middle"
                transform="rotate(-90, -65, 227.5)"
                x="-65"
                y="227.5"
              >
                <tspan
                  dominant-baseline="text-before-edge"
                  dy="0px"
                  x="-65"
                >
                  Yearly Interest ($)
                </tspan>
              </text>
            </g>
          </g>
          <g
            data-drawing-container="true"
          >
            <g
              class="MuiLineChart-markPlot css-1xks5uz-MuiMarkPlot-root"
            >
              <g
                clip-path="url(#_r_4_-auto-generated-id-0-line-clip)"
                data-series="auto-generated-id-0"
              />
              <g
                clip-path="url(#_r_4_-auto-generated-id-1-line-clip)"
                data-series="auto-generated-id-1"
              />
              <g
                clip-path="url(#_r_4_-auto-generated-id-2-line-clip)"
                data-series="auto-generated-id-2"
              />
              <g
                clip-path="url(#_r_4_-auto-generated-id-3-line-clip)"
                data-series="auto-generated-id-3"
              />
              <g
                clip-path="url(#_r_4_-auto-generated-id-4-line-clip)"
                data-series="auto-generated-id-4"
              />
              <g
                clip-path="url(#_r_4_-auto-generated-id-5-line-clip)"
                data-series="auto-generated-id-5"
              />
              <g
                clip-path="url(#_r_4_-auto-generated-id-6-line-clip)"
                data-series="auto-generated-id-6"
              />
              <g
                clip-path="url(#_r_4_-auto-generated-id-7-line-clip)"
                data-series="auto-generated-id-7"
              />
              <g
                clip-path="url(#_r_4_-auto-generated-id-8-line-clip)"
                data-series="auto-generated-id-8"
              />
              <g
                clip-path="url(#_r_4_-auto-generated-id-9-line-clip)"
                data-series="auto-generated-id-9"
              />
            </g>
          </g>
          <clippath
            id="_r_3_-clip-path"
          >
            <rect
              height="415"
              width="-5"
              x="85"
              y="20"
            />
          </clippath>
        </svg>
        <div
          style="position: absolute; left: 0px; top: 0px; pointer-events: none; opacity: 0; width: 1px; height: 1px;"
        />
      </div>
    </div>
    <span
      class="MuiTypography-root MuiTypography-caption css-u1vmxs-MuiTypography-root"
    >
      * Graph shows interest rates for savings from $0 to $200,000, covering typical savings account ranges
    </span>
  </div>
</DocumentFragment>
`;
